2003-12-08  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: Properly fixed essential and builddependsonly checks in
	cmd_remove.

2003-12-07  Justin F. Hallett  <thesin@users.sourceforge.net>

	* PkgVersion.pm: Added force switch to resolve_depends so duplicate
	WARNINGS for the same depend won't show twice on sub depend checks.
	* Engine.pm: Added $forceoff switch to resolve_depends calls.

2003-12-04  Daniel Macks <dmacks@netspace.org>

	* Services.pm: Fixed latest_version to continue past (and ignore)
	undef values rather than ignoring the rest of the passed list.
	* Services.pm: Finished PODifying the docs.

2003-12-04  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: Add file-spec-pm, test-harness-pm, and test-simple-pm
	when bootstrapping under perl 5.6.x.

2003-12-04  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: Fixed double building issue in my dep check code. And
	removed a few more prints on secondary builds.

2003-12-03  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: made it so fink can't remove or purge essential pkgs
	and added warnings for it and not installed packages.
	Also made it so if the pkgs to be removed are the same as the ones
	in ARGV then don't ask first.  And added a print_breaking for long
	package listings. Disabled parent essential params on splitoffs.
	Changed BuildDependsOnly and Essential checks from has_param to
	param_boolean, in case it's there and set to false. Fixed the not
	installed warning, and prints and exits if nothing to do instead of
	dieing. Enabled the check each depend's depends before build.
	VERY EXPERIMENTAL please test.

2003-12-03  Daniel Macks <dmacks@netspace.org>

	* Services.pm: Initial go at PODifying the docs.

2003-12-03  Daniel Macks <dmacks@netspace.org>

	* Services.pm: Shuffled @EXPORT_OK to be in same order as the subs
	appear in the file.

2003-12-02  Justin F. Hallett  <thesin@users.sourceforge.net>
