@@ -1,5 +1,11 @@
 2003-12-08  Justin F. Hallett  <thesin@users.sourceforge.net>
 
+	* Engine.pm: Adding "fink splits", shows parent and splitoffs in a pkg
+	* PkgVersion.pm: Adding sub get_splitoffs() has two switches, to
+	include self in list and include parent.
+
+2003-12-08  Justin F. Hallett  <thesin@users.sourceforge.net>
+
 	* Engine.pm: Properly fixed essential and builddependsonly checks in
 	cmd_remove.
 
